Observable Get & iFrame implemented

--- a/src/app/video-detail/video-detail.component.html
+++ b/src/app/video-detail/video-detail.component.html
@@ -1,10 +1,43 @@
 <p>video-detail works!</p>
 
-<div class="card" style="margin-top: 125px;" *ngIf="video != null">
-    <div class="card-header">{{ video.title }}</div>
-    <div class="card-body">{{ video.description }}</div>
+<div *ngIf="video != null && !update">
+    <iframe [src]="video.url | safe" frameborder="0" height="300" width="100%"
+    allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<div *ngIf="video == null" style="margin-top: 125px;">
-    <p>Select a Video from the list.</p>
-</div>
+<form>
+    <div class="card" *ngIf="video != null">
+        <div *ngIf="!update" class="card-header">{{ video.title }}</div>
+        <div *ngIf="update" class="form-group mx-3 mt-3">
+            <input 
+                type="input" 
+                class="form-control" 
+                name="title" 
+                required placeholder="title"
+                [(ngModel)]="video.title"
+            >
+        </div>
+        <!--   put I-FRAME here   -->
+        <div *ngIf="update" class="form-group mx-3">
+            <input 
+                type="input" 
+                class="form-control" 
+                name="url" 
+                required 
+                placeholder="url"
+                [(ngModel)]="video.url"
+            >
+        </div>
+        <div *ngIf="!update" class="card-body">{{ video.description }}</div>
+        <div *ngIf="update" class="form-group mx-3">
+            <textarea type="input" class="form-control" rows="5" name="desc" placeholder="Put description here..." [(ngModel)]="video.description"></textarea>
+        </div>
+        <div class="form-group mx-3">
+            <button class="btn btn-sm btn-outline-warning" (click)="updateOrSave()">UPDATE</button>
+        </div>
+    </div>
+    
+    <div *ngIf="video == null" style="margin-top: 125px;">
+        <p>Select a Video from the list.</p>
+    </div>
+</form>
