--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,4 @@
     <h1 class="text-center">Video Player</h1>
 </div>
 
-<p>left off at video 17: https://www.youtube.com/watch?v=bk0hR97xMNA&list=PLC3y8-rFHvwj200LLotCYum_9wmGeTJx9&index=17</p>
+<p>left off at video 22: https://www.youtube.com/watch?v=tZACZN3jXgQ&list=PLC3y8-rFHvwj200LLotCYum_9wmGeTJx9&index=22</p>
