--- a/src/app/video-list/video-list.component.html
+++ b/src/app/video-list/video-list.component.html
@@ -6,4 +6,5 @@
     style="cursor: pointer;">
     <div class="card-header">{{ video.title }}</div>
     <div class="card-body">{{ video.description }}</div>
+    <div class="card-body">id: {{ video._id }}</div>
 </div>
