--- a/src/app/video-detail/video-detail.component.html
+++ b/src/app/video-detail/video-detail.component.html
@@ -46,7 +46,14 @@
         </div>
     </div>
     
-    <div style="margin-top: 125px;">
-        <p [hidden]="video">Select a Video from the list.</p>
-    </div>
+    
 </form>
+
+<div style="margin-top: 125px;">
+    <p [hidden]="video">Select a Video from the list.</p>
+</div>
+
+<p>Update is not working</p>
+<p>Delete does not delete the correct one</p>
+<p>Some will not delete at all</p>
+<p>Post/Create is not grabbing _id like I thought it was</p>
